# fastapi-enterprise-app

./: .env.example  .gitignore  Dockerfile  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: ci.yaml  docker.yaml
app/: main.py
app/api/: health_db.py
app/core/: config.py  db.py  logging.py
scripts/: dev.sh  test.sh
tests/integration/: test_db_health.py
tests/unit/: test_health.py
